--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ svg {
     Responsive Layout
    ---------------------------------------- */
 
-@media (width <= 900px) {
+@media (620px < width <= 900px) {
     #projectsPage {
         grid-template-columns: 1fr 1fr;
     }
@@ -240,7 +240,6 @@ svg {
 @media (width <= 620px) {
     #index {
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas:
             "summary"
             "bio"
@@ -251,9 +250,13 @@ svg {
         border-radius: 100%;
     }
 
+    #projectsPage {
+        grid-template-columns: 1fr;
+    }
+
     #rpsPage {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 30vmin 30vmin 30vmin;
+        grid-template-rows: 15vh 30vh 30vh;
         grid-template-areas:
             "player result computer"
             "buttons buttons stats"
