--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
    ---------------------------------------- */
 #projectsPage {
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 400px 400px;
+    grid-template-rows: 60vh 60vh 60vh;
 }
 
 .project {
@@ -129,6 +129,12 @@ h1, h2, h3, h4, h5, h6 {
     grid-template-areas:
         "picture title"
         "picture description";
+}
+
+#website {
+    grid-template-areas:
+        "title title"
+        "description description";
 }
 
 .picture {
@@ -231,13 +237,13 @@ svg {
     Responsive Layout
    ---------------------------------------- */
 
-@media (620px < width <= 900px) {
+@media (min-width: 620px) and (max-width: 900px) {
     #projectsPage {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media (width <= 620px) {
+@media (max-width: 620px) {
     #index {
         grid-template-columns: 1fr;
         grid-template-rows: 50vh 40vh 60vh;
