--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     Navigation Bar
    ---------------------------------------- */
 nav {
-    width: 100%;
+
     height: 100%;
 }
 
@@ -96,6 +96,11 @@ h1, h2, h3, h4, h5, h6 {
         "bio bio";
 }
 
+.container, nav {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 #portrait {
     width: 100%;
     height: 100%;
@@ -103,12 +108,17 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: var(--main-radius);
 }
 
-.bio        { grid-area: bio; }
-.summary    { grid-area: summary; }
+.bio { 
+    grid-area: bio;
+    font-size: 22px;
+}
+.summary { 
+    grid-area: summary;
+    font-size: 20px;
+}
 .bio, .summary {
     padding-left: 5%;
     padding-right: 5%;
-    font-size: 18px;
 }
 
 /* ----------------------------------------
@@ -278,12 +288,24 @@ svg {
    ---------------------------------------- */
 
 @media (min-width: 620px) and (max-width: 900px) {
+    
+    .container, nav {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    
     #projectsPage {
         grid-template-columns: 1fr 1fr;
     }
 }
 
 @media (max-width: 620px) {
+
+    .container, nav {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
     #index {
         /* grid-template-rows: 50vh 40vh 60vh; */
         grid-template-rows: auto auto 60vh;
