--- a/style.css
+++ b/style.css
@@ -52,9 +52,14 @@ nav li a:hover {
 /* ----------------------------------------
     General CSS
    ---------------------------------------- */
+.container, .projectContainer, nav {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
 body {
     background: var(--color-bg);
-    color: var(--color-text-general)
+    color: var(--color-text-general);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -94,11 +99,6 @@ h1, h2, h3, h4, h5, h6 {
     grid-template-areas:
         "picture summary"
         "bio bio";
-}
-
-.container, nav {
-    padding-left: 5%;
-    padding-right: 5%;
 }
 
 #portrait {
@@ -289,7 +289,7 @@ svg {
 
 @media (min-width: 620px) and (max-width: 900px) {
     
-    .container, nav {
+    .container, .projectContainer, nav {
         padding-left: 0;
         padding-right: 0;
     }
@@ -301,7 +301,7 @@ svg {
 
 @media (max-width: 620px) {
 
-    .container, nav {
+    .container, .projectContainer, nav {
         padding-left: 0;
         padding-right: 0;
     }
